--- a/index.html
+++ b/index.html
@@ -177,13 +177,14 @@
 			</div>
 
 		</div>
-		<div class="container">
+		<div class="container-fluid">
 				<div class="row row justify-content-center">
 					<div class="col-12 col-sm-6 col-lg-3">
 						<div class="garanty">
 							<div class="garanty-icon">
 							<img src="./img/victory.svg" alt="" class="garanty-img">
 							</div>
+							<h5 class="garanty-title">Lorem, ipsum.</h5>
 							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
 						</div>
 					</div>
@@ -192,6 +193,7 @@
 							<div class="garanty-icon">
 							<img src="./img/victory.svg" alt="" class="garanty-img">
 							</div>
+							<h5 class="garanty-title">Lorem, ipsum.</h5>
 							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
 						</div>
 					</div>
@@ -200,6 +202,7 @@
 							<div class="garanty-icon">
 							<img src="./img/victory.svg" alt="" class="garanty-img">
 							</div>
+							<h5 class="garanty-title">Lorem, ipsum.</h5>
 							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
 						</div>
 					</div>
@@ -208,6 +211,7 @@
 							<div class="garanty-icon">
 							<img src="./img/victory.svg" alt="" class="garanty-img">
 							</div>
+							<h5 class="garanty-title">Lorem, ipsum.</h5>
 							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
 						</div>
 					</div>
