--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 						<a class="navbar-brand" href="#">
-								<svg width="180px" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								<svg width="180px" height="58.8" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 				viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
 		 <g>
 			 <g>
@@ -135,21 +135,21 @@
 				</div>
 			</nav>
 		</header>
-	
+	<div class="container-fluid no-gutters">
 		<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img class="d-block w-100" src="./img/1355-min.jpg"alt="First slide">
 							<div class="carousel-caption d-none d-md-block slider-diskr">
 									<h5 class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-									<p class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
+									<p class="slider-diskr ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
 								</div>
 				</div>
 				<div class="carousel-item">
 					<img class="d-block w-100" src="./img/230084-P1ZDYH-681-min.jpg" alt="Second slide">
 					<div class="carousel-caption d-none d-md-block slider-diskr">
 						<h5 class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-						<p class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
+						<p class="slider-diskr ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
 					</div>
 				</div>
 			</div>
@@ -162,63 +162,100 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
-		<div class="container-fluid about">
-				<div class="row justify-content-between">
-						<div class="container">
-								<div class="container-fluid justify-content-around">
-							<h1 class="elictro">
-								Lorem ipsum dolor sit amet consectetur.
-								</h1>
-								<p class="about-discr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias non commodi quo culpa maxime ducimus libero ut cumque ab temporibus amet cupiditate, eligendi ad deleniti reiciendis impedit at, omnis magni itaque quia, perferendis officia vero esse? Quos, tenetur. Vitae, quam?</p>
-								<!-- /.about-discr -->
-
-
+	<div class="row justify-content-center">
+				<div class="col-12">
+				<h1 class="about-title">
+					Lorem ipsum dolor sit.
+				</h1>
+				<p class="about-descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem earum et, animi aut corrupti quo molestiae minima maxime nemo praesentium.</p>
+			</div>
+			
+	</div>
+		<div class="row justify-content-center">
+				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
+				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
+				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
+			</div>
+				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
+				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
+				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
+			</div>
+				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
+				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
+				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
+			</div>
+				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
+				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
+				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
+			</div>
+			</div>
+		
+		
+		
+	<div class="row align-items-center">
+			<div class="col-12 col-md-6 col-lg-5">
+				<img width="100%" src="/img/electro-min.jpg" alt="" class="electro-img fluid">
+			</div>
+			<div class="col-12 col-md-6 col-lg-7">
+					<h2 class="electro-tiitle">Lorem ipsum dolor sit, amet consectetur adipisicing.</h2>
+					<p class="electro-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolores cupiditate eaque ullam voluptas natus quisquam. Adipisci nemo officiis optio illo id, vel unde non nam soluta quis pariatur aut temporibus? Minima obcaecati ipsam vero doloribus, iusto rem aliquid libero.</p>
 				</div>
 			</div>
-
-		</div>
-		<div class="container-fluid">
-				<div class="row row justify-content-center">
-					<div class="col-12 col-sm-6 col-lg-3">
-						<div class="garanty">
-							<div class="garanty-icon">
-							<img src="./img/victory.svg" alt="" class="garanty-img">
+		
+			<div class="row align-items-center">
+				<div class="col-12 col-md-6 col-lg-3">
+						<div class="card">
+								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title">Название карточки</h5>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
+								</div>
 							</div>
-							<h5 class="garanty-title">Lorem, ipsum.</h5>
-							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-lg-3">
-						<div class="garanty">
-							<div class="garanty-icon">
-							<img src="./img/victory.svg" alt="" class="garanty-img">
+				</div>
+				<div  class="col-12 col-md-6 col-lg-3">
+						<div class="card">
+								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title">Название карточки</h5>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
+								</div>
 							</div>
-							<h5 class="garanty-title">Lorem, ipsum.</h5>
-							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-lg-3">
-						<div class="garanty">
-							<div class="garanty-icon">
-							<img src="./img/victory.svg" alt="" class="garanty-img">
+				</div>
+				<div class="col-12 col-md-6 col-lg-3">
+						<div class="card">
+								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title">Название карточки</h5>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
+								</div>
 							</div>
-							<h5 class="garanty-title">Lorem, ipsum.</h5>
-							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
-						</div>
-					</div>
-					<div class="col-12 col-sm-6 col-lg-3">
-						<div class="garanty">
-							<div class="garanty-icon">
-							<img src="./img/victory.svg" alt="" class="garanty-img">
+				</div>
+				<div class="col-12 col-md-6 col-lg-3">
+						<div class="card">
+								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title">Название карточки</h5>
+									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
+								</div>
 							</div>
-							<h5 class="garanty-title">Lorem, ipsum.</h5>
-							<p class="garanty-discr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo asperiores aspernatur quia recusandae vero in id laudantium tempora officiis est non exercitationem, nihil deleniti dolores optio alias quod rem sed.</p>
-						</div>
-					</div>
 				</div>
 			</div>
-</div>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		
+
+				<div class="row justify-content-center align-items-center">
+					<div class="col">
+					<h3 class="about-title">
+						Lorem ipsum dolor sit.
+					</h3>
+					<button class="call-to-action-button">ПОДРОБНЕЕ</button>
+				</div>
+				</div>
+			</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
