--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="./css/main.css">
 	<title>DC Power</title>
 </head>
-	
+
 <body>
-	<header class="main-menu">
-		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-						<a class="navbar-brand" href="#">
-								<svg width="180px" height="58.8" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-				viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
-		 <g>
-			 <g>
-				 <path class="st0" d="M30.6,170.7l-4.3,19.2l-4.6-19.2h-7.5L12,198.5h5.7l0.6-11.2c0.1-1.8,0.2-3.8,0.2-6c0-2-0.1-3.9-0.2-5.5
+	<header class="main-menu no-gutters">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light main-menu-container">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
+			 aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+				<a class="navbar-brand" href="#">
+					<svg width="180px" height="58.8" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+					 x="0px" y="0px" viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
+						<g>
+							<g>
+								<path class="st0" d="M30.6,170.7l-4.3,19.2l-4.6-19.2h-7.5L12,198.5h5.7l0.6-11.2c0.1-1.8,0.2-3.8,0.2-6c0-2-0.1-3.9-0.2-5.5
 					 l5,19.7H29l4.7-19.7c0,0.6,0,1.5,0,2.7c0,2.4,0.1,5.2,0.3,8.6l0.6,11.3h5.8l-2.1-27.8H30.6z M53.7,176.5c-2.1,0-3.9,0.5-5.5,1.4
 					 c-1.5,0.9-2.7,2.3-3.5,4c-0.8,1.7-1.2,3.7-1.2,5.9c0,3.5,0.9,6.3,2.7,8.3c1.8,2,4.3,3,7.5,3c2.1,0,3.9-0.5,5.4-1.4
 					 c1.5-0.9,2.7-2.3,3.5-4c0.8-1.7,1.2-3.7,1.2-5.9c0-3.5-0.9-6.3-2.7-8.3C59.4,177.5,56.9,176.5,53.7,176.5z M56.8,193.2
@@ -110,154 +113,76 @@
 					 c-4.9,0-9.3-1.1-12.9-3.3c-3.7-2.2-6.5-5.3-8.5-9.2c-2-3.9-3-8.5-3-13.8c0-4.8,1.1-9.2,3.2-13.1c2.1-3.9,5-7.1,8.6-9.4
 					 c3.6-2.3,7.5-3.4,11.6-3.4c6.1,0,12.1,2.2,17.9,6.6l6.3-15.2c-3.2-2-6.9-3.7-11.1-5c-4.2-1.3-8.8-2-13.7-2
 					 c-7.8,0-14.7,1.8-20.7,5.4c-6,3.6-10.6,8.6-13.9,15c-3.3,6.4-5,13.7-5,21.9c0,7.5,1.7,14.3,5,20.5c3.3,6.2,8.1,11.2,14.4,14.9
-					 c6.3,3.7,13.6,5.5,22.1,5.5c5.3,0,10.2-0.8,14.7-2.5C147.6,125,150.9,123.3,153,121.6z"/>
-			 </g>
-		 </g>
-		 
-		 <path class="st1" d="M213,13.6l38.7-0.4l-17.5,34.9l50.2,0l-85.1,106l4.3-66.6h-32.3L213,13.6z"/>
-		 
-		 </svg>
-							</a>
-					<ul class="navbar-nav ml-auto">
-							<li class="nav-item">
-								<a class="nav-link">услуга 1</a>
-							</li>
-							<li class="nav-item">
-									<a class="nav-link">услуга 2</a>
-								</li>
-								<li class="nav-item">
-										<a class="nav-link">услуга 3</a>
-									</li>
-							<form class="form-inline">
-									<button class="btn main-menu-btn" type="button">Связаться</button>
-								</form>
-						</ul>
-				</div>
-			</nav>
-		</header>
-	<div class="container-fluid no-gutters">
-		<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img class="d-block w-100" src="./img/1355-min.jpg"alt="First slide">
-							<div class="carousel-caption d-none d-md-block slider-diskr">
-									<h5 class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-									<p class="slider-diskr ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
-								</div>
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="./img/230084-P1ZDYH-681-min.jpg" alt="Second slide">
-					<div class="carousel-caption d-none d-md-block slider-diskr">
-						<h5 class="slider-diskr">Lorem ipsum dolor sit amet consectetur adipisicing.</h5>
-						<p class="slider-diskr ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum non quos tempora dicta facilis id deleniti nulla reprehenderit nam error placeat illo, adipisci exercitationem saepe hic dignissimos ab reiciendis accusamus molestias. Maxime consectetur quis dignissimos velit inventore. Rerum, quae doloribus.</p>
-					</div>
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
-		</div>
-	<div class="row justify-content-center">
-				<div class="col-12">
-				<h1 class="about-title">
-					Lorem ipsum dolor sit.
-				</h1>
-				<p class="about-descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem earum et, animi aut corrupti quo molestiae minima maxime nemo praesentium.</p>
-			</div>
-			
-	</div>
-		<div class="row justify-content-center">
-				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
-				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
-				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
-			</div>
-				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
-				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
-				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
-			</div>
-				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
-				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
-				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
-			</div>
-				<div class="col-12 col-sm-6 col-md-3 about-plus"><img src="/img/victory.svg" alt="" class="about-img">
-				<h5 class="about-plus-title">Lorem, ipsum dolor.</h5>
-				<p class="about-plus-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quo!</p>
-			</div>
-			</div>
-		
-		
-		
-	<div class="row align-items-center">
-			<div class="col-12 col-md-6 col-lg-5">
-				<img width="100%" src="/img/electro-min.jpg" alt="" class="electro-img fluid">
-			</div>
-			<div class="col-12 col-md-6 col-lg-7">
-					<h2 class="electro-tiitle">Lorem ipsum dolor sit, amet consectetur adipisicing.</h2>
-					<p class="electro-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolores cupiditate eaque ullam voluptas natus quisquam. Adipisci nemo officiis optio illo id, vel unde non nam soluta quis pariatur aut temporibus? Minima obcaecati ipsam vero doloribus, iusto rem aliquid libero.</p>
-				</div>
-			</div>
-		
-			<div class="row align-items-center">
-				<div class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
-								<div class="card-body">
-									<h5 class="card-title">Название карточки</h5>
-									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-								</div>
-							</div>
-				</div>
-				<div  class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
-								<div class="card-body">
-									<h5 class="card-title">Название карточки</h5>
-									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-								</div>
-							</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
-								<div class="card-body">
-									<h5 class="card-title">Название карточки</h5>
-									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-								</div>
-							</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-3">
-						<div class="card">
-								<img class="card-img-top" src="./img/electro-min.jpg" alt="Card image cap">
-								<div class="card-body">
-									<h5 class="card-title">Название карточки</h5>
-									<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-									<a href="#" class="btn btn-primary">Переход куда-нибудь</a>
-								</div>
-							</div>
-				</div>
-			</div>
-		
+					 c6.3,3.7,13.6,5.5,22.1,5.5c5.3,0,10.2-0.8,14.7-2.5C147.6,125,150.9,123.3,153,121.6z" />
+							</g>
+						</g>
 
-				<div class="row justify-content-center align-items-center">
-					<div class="col">
-					<h3 class="about-title">
-						Lorem ipsum dolor sit.
-					</h3>
-					<button class="call-to-action-button">ПОДРОБНЕЕ</button>
-				</div>
-				</div>
+						<path class="st1" d="M213,13.6l38.7-0.4l-17.5,34.9l50.2,0l-85.1,106l4.3-66.6h-32.3L213,13.6z" />
+
+					</svg>
+				</a>
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link">услуга 1</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link">услуга 2</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link">услуга 3</a>
+					</li>
+
+				</ul>
+				<button href="#" class="main-menu-btn" type="button">Связаться</button>
 			</div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		</nav>
+	</header>
+	<div class="container-fluid no-gutters main-container">
+		<div class="row header-row align-items-center">
+			<div class="col-12 col-md-6 header-row-one">
+				<h1 class="header-row-text align-middle">Lorem, ipsum.</h1>
+				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae iste optio perferendis.
+					Culpa adipisci .</p>
+				<button class="contact-us">Lorem.</button>
+			</div>
+			<div class="col-12 col-md-6 header-row-one-img">
+						<svg class="hero-svg" width="100px" aria-hidden="true" data-prefix="fas" data-icon="code-branch" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" >
+							<path  fill="#3c3b3d" d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 36.4 24.3 67.1 57.5 76.8-.6 16.1-4.2 28.5-11 36.9-15.4 19.2-49.3 22.4-85.2 25.7-28.2 2.6-57.4 5.4-81.3 16.9v-144c32.5-10.2 56-40.5 56-76.3 0-44.2-35.8-80-80-80S0 35.8 0 80c0 35.8 23.5 66.1 56 76.3v199.3C23.5 365.9 0 396.2 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-34-21.2-63.1-51.2-74.6 3.1-5.2 7.8-9.8 14.9-13.4 16.2-8.2 40.4-10.4 66.1-12.8 42.2-3.9 90-8.4 118.2-43.4 14-17.4 21.1-39.8 21.6-67.9 31.6-10.8 54.4-40.7 54.4-75.9zM80 64c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16zm0 384c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm224-320c8.8 0 16 7.2 16 16s-7.2 16-16 16-16-7.2-16-16 7.2-16 16-16z" class=""></path></svg>
+			</div>
+		</div>
+		<div class="row justify-content-center cards">
+		<div class="col-12 col-md-6 col-lg-3 card-about"> 
+			<div class="img-container">
+			<img src="/img/victory.svg" alt="" class="card-img">
+			</div>
+			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
+		</div>
+		<div class="col-12 col-md-6 col-lg-3 card-about"> 
+			<div class="img-container">
+			<img src="/img/victory.svg" alt="" class="card-img">
+			</div>
+			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
+		</div>
+		<div class="col-12 col-md-6 col-lg-3 card-about"> 
+			<div class="img-container">
+			<img src="/img/victory.svg" alt="" class="card-img">
+			</div>
+			<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
+		</div>
+		<div class="col-12 col-md-6 col-lg-3 card-about"> 
+				<div class="img-container">
+				<img src="/img/victory.svg" alt="" class="card-img">
+				</div>
+				<span class="card-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, suscipit!</span>
+			</div>
+	</div>
+	</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		 crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+		 crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		 crossorigin="anonymous"></script>
 </body>
 
 </html>
