--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/css/404.css">
+	<link rel="stylesheet" href="./css/404.css">
 	<title>404</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 			<button class="back">На главную</button>
 		</div>
 		<div class="img_error_container">
-			<img src="/img/404_bg.svg" alt="" class="img_error_bg">
+			<img src="./img/404_bg.svg" alt="" class="img_error_bg">
 		<div class="error_img"><svg width="100px" class="svg_img" height="100px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 84.24 63.84"><defs><style>.cls-1{fill:#f7aca6;}.cls-2{fill:#f7ecbf;}.cls-3{fill:#fbf6e2;}.cls-4{fill:#8f7967;}</style></defs><title>Ресурс 1</title><g id="Слой_2" data-name="Слой 2"><g id="BACKGROUND1"><path class="cls-1" d="M61.53,35.24a5.81,5.81,0,1,1-7.43-3.52A5.82,5.82,0,0,1,61.53,35.24Z"/><rect class="cls-2" x="28.89" y="38.47" width="5.7" height="25.15" transform="translate(-15.32 13.65) rotate(-19.65)"/><rect class="cls-2" x="65.37" y="25.44" width="5.7" height="25.15" transform="translate(-8.81 25.16) rotate(-19.65)"/><path class="cls-3" d="M20.32,6.42h47.9a6.2,6.2,0,0,1,6.2,6.2V39.28a0,0,0,0,1,0,0h-48a6.15,6.15,0,0,1-6.15-6.15V6.42a0,0,0,0,1,0,0Z" transform="translate(-4.92 17.26) rotate(-19.65)"/><rect class="cls-3" x="38" y="35.21" width="5.7" height="25.15" transform="translate(-13.69 16.52) rotate(-19.65)"/><rect class="cls-3" x="74.47" y="22.19" width="5.7" height="25.15" transform="translate(-7.19 28.03) rotate(-19.65)"/><path class="cls-4" d="M25.17,11.67l-.12-.33a3.46,3.46,0,0,0-4.42-2.09L8.5,13.59A3.45,3.45,0,0,0,6.4,18l.12.33L0,20.66s3.26,5,7.15-.56l4.54,12.72a8,8,0,0,0,10.25,4.85l3.55-1.27a8,8,0,0,0,4.85-10.24L25.8,13.44c6.54,1.84,5.89-4.1,5.89-4.1Z"/><path class="cls-4" d="M61.48.36,46.21,5.82a28.62,28.62,0,0,0,4.55,3.12,18.19,18.19,0,0,0,6,2.62c3.4.58,6.84-.83,9.8-2.61a13.31,13.31,0,0,0,3.59-2.9l-.69-1.93A6.2,6.2,0,0,0,61.48.36Z"/><path class="cls-4" d="M47.08,17.47a16.81,16.81,0,0,1,3.5,3.34,8.22,8.22,0,0,1,1.7,4.48A7.36,7.36,0,0,1,47.92,32a9.62,9.62,0,0,1-8.18-.36,13.9,13.9,0,0,1-5.82-6,12.67,12.67,0,0,1-1.61-5.55,7.93,7.93,0,0,1,1.78-5.41C37.39,10.89,44.05,15.19,47.08,17.47Z"/><path class="cls-3" d="M6.4,18l.12.33L0,20.66s3.26,5,7.15-.56l3.06,8.57A9.61,9.61,0,0,0,15,23.86a10.63,10.63,0,0,0,.81-3.7,13.08,13.08,0,0,0-1-5.69,11.36,11.36,0,0,0-1.46-2.61L8.5,13.59A3.45,3.45,0,0,0,6.4,18Z"/></g></g></svg></div>
 	</div>
 </div>
