--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 	<header class="main-menu no-gutters">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light main-menu-container">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
+			<button href="404.html" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
 			 aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" hrefS="#">
 					<svg width="180px" height="58.8" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 					 x="0px" y="0px" viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
 						<g>
