--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700&amp;subset=cyrillic" rel="stylesheet">	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="./css/main.css">
-	<title>DC Power</title>
+	<title>AC Power</title>
 </head>
 
 <body>
 	<header class="main-menu no-gutters">
-		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light main-menu-container">
-			<button href="404.html" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
-			 aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-				<a class="navbar-brand" hrefS="#">
+		<nav class="navbar">
+			 <a class="menu-btn" id="m_menu">
+				<span></span>
+			</a>
+			<div class="main-navigation" id="navigation">
+				<a class="navbar-brand" href="#">
 					<svg width="180px" height="58.8" version="1.1" id="sl_main" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 					 x="0px" y="0px" viewBox="0 0 710 232" style="enable-background:new 0 0 710 232;" xml:space="preserve">
 						<g>
@@ -121,20 +119,22 @@
 
 					</svg>
 				</a>
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link">услуга 1</a>
+				<div class="main-navigation-container" id="m_memu_text">
+				<ul class="navbar-links">
+					<li class="nav-link">
+						<a href="#" class="nav-a">услуга12rqweqweqe 1</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link">услуга 2</a>
+					<li class="nav-link">
+						<a href="#" class="nav-a">услуга12rqweqweqe 2</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link">услуга 3</a>
+					<li class="nav-link">
+						<a href="#" class="nav-a">услуга12rqweqweqe 3</a>
 					</li>
 
 				</ul>
-				<button href="#" class="main-menu-btn" type="button">Связаться</button>
+				<a href="form.html"><button href="./404.html" class="main-menu-btn" type="button">Связаться</button></a>
 			</div>
+		</div>
 		</nav>
 	</header>
 	<div class="container-fluid no-gutters main-container">
@@ -143,7 +143,7 @@
 				<!-- <h1 class="header-row-text align-middle">Электричество в ВАШ дом</h1> -->
 				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae iste optio perferendis.<br>Lorem ipsum dolor sit amet
 					Culpa adipisci .</p>
-				<button class="contact-us">Подробнее</button>
+				<a href="/404.html"><button class="contact-us">Подробнее</button></a>
 			</div>
 			<div class="col-12 col-md-6 header-row-one-img">
 				
@@ -204,12 +204,7 @@
 		</div>
 	</div>
 	</div>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-		 crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		 crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		 crossorigin="anonymous"></script>
+	<script src="./js/main.js"></script>
 </body>
 
 </html>
