--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 		<div class="error_text">
 			<h1>404</h1>
 			<small>Что то пошло не по плану</small>
-			<button class="back">На главную</button>
+			<a href="./index.html"><button class="back">На главную</button></a>
 		</div>
 		<div class="img_error_container">
 			<img src="./img/404_bg.svg" alt="" class="img_error_bg">
