--- a/form.html
+++ b/form.html
@@ -30,8 +30,7 @@
 									<span class="validity"></span>
 								</div>
 									<div class="contact_us_lable">
-										<input type="tel" id="phone" name="phone" placeholder="89005447909" pattern="[1-9]{1}[0-9]{3}[0-9]{3}[0-9]{4}"
-					 required />
+										<input type="tel" id="phone" name="phone" placeholder="+7 (900) 544 7909" required>
 					 <span class="validity"></span>
 					</div>
 					<div class="contact_us_button">	<button class="back">Push</button>
@@ -43,6 +42,6 @@
 	
 		</section>
 	</main>
-	
+	<script src="./js/form.js"></script>
 </body>
 </html>
