--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 				<div class="main-navigation-container" id="m_memu_text">
 				<ul class="navbar-links">
 					<li class="nav-link">
-						<a href="#" class="nav-a">услуга12rqweqweqe 1</a>
+						<a href="#" class="nav-a">About</a>
 					</li>
 					<li class="nav-link">
-						<a href="#" class="nav-a">услуга12rqweqweqe 2</a>
+						<a href="#" class="nav-a">Functions</a>
 					</li>
 					<li class="nav-link">
-						<a href="#" class="nav-a">услуга12rqweqweqe 3</a>
+						<a href="#" class="nav-a">What we do?</a>
 					</li>
 
 				</ul>
@@ -137,7 +137,7 @@
 	<div class="container-fluid no-gutters main-container">
 		<div class="row header-row align-items-center">
 			<div class="col-12 col-md-6 header-row-one">
-				<!-- <h1 class="header-row-text align-middle">Электричество в ВАШ дом</h1> -->
+				<h1 class="header-row-text align-middle">power in your house</h1>
 				<p class="header-row-text-descr">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae iste optio perferendis.<br>Lorem ipsum dolor sit amet
 					Culpa adipisci .</p>
 				<a href="/404.html"><button class="contact-us">Подробнее</button></a>
