--- a/form.html
+++ b/form.html
@@ -50,11 +50,11 @@
 												<span class="contact_us_text">Связаться с нами</span>
 											</div>
 								<div class="contact_us_lable">
-									<input placeholder="Name" type="text" required="">
+									<input placeholder="Name" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
 								</div>
 								<div class="contact_us_lable">
-									<input placeholder="email" type="email" required="">
+									<input placeholder="reqest" type="text" required pattern="^[A-Za-zА-Яа-яЁё\s]+$">
 									<span class="validity"></span>
 								</div>
 									<div class="contact_us_lable">
