--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 				</div>
 					<div class="contact_us_lable">
 					<input id="subject" class="text-input" name="entry.1558941179" type="text" required />
-					<label class="form-label" for="subject">Чем вам помочь? (проводка, наладка)</label>
+					<label class="form-label" for="subject">Чем вам помочь?</label>
 				</div>
 				<div class="contact_us_lable">
 					<input class="push" type="submit" value="Отправить" />
